# wagtail-dynamic-dropdown

./: .gitignore  LICENSE  MANIFEST.in  README.rst  edit_handlers.py  manage.py  pytest.ini  runtests.py  setup.cfg
tests/: settings.py  test_edit_handlers.py  test_page.py  test_widget.py  urls.py
tests/static/wagtail_dynamic_dropdown/js/: dynamic_dropdown.js
tests/static/wagtail_dynamic_dropdown/styles/: dynamic_dropdown.css
tests/static/wagtailadmin/js/: sidebar.js  sidebar.js.map
tests/testapp/: dynamic_functions.py  models.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/testapp/: index.html
wagtail_dynamic_dropdown/: apps.py  edit_handlers.py  widgets.py
wagtail_dynamic_dropdown/static/wagtail_dynamic_dropdown/styles/: dynamic_dropdown.css
wagtail_dynamic_dropdown/templates/wagtail_dynamic_dropdown/widgets/: dynamic_dropdown.html  dynamic_dropdown_input.html  dynamic_dropdown_option.html
