[metadata]
name = wagtail-dynamic-dropdown
version = 0.0.1
author = LilJack118
author_email = jakub@kachange.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LilJack118/wagtail-dynamic-dropdown
project_urls =
    Bug Tracker = https://github.com/LilJack118/wagtail-dynamic-dropdown/issues
keywords = wagtail django
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:
