[metadata]
name = wagtail-dynamic-dropdown
version = 0.0.4
author = LilJack118
author_email = jakub@kachange.com
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/LilJack118/wagtail-dynamic-dropdown
project_urls =
    Bug Tracker = https://github.com/LilJack118/wagtail-dynamic-dropdown/issues
keywords = wagtail django
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:

[flake8]
max-line-length = 120
exclude = .*,migrations,build,dist

[codespell]
ignore-words-list = worl
skip = migrations,build,dist,*.map

[mypy]
ignore_missing_imports = True